unpackaged/main/default/objects/ShowsiteContactSetting__c/ShowsiteContactSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Showsite Contact Setting</label>
</CustomObject>