unpackaged/main/default/objects/ShowsiteContactSetting__c/fields/ApplicationID__c.field-meta.xml
<CustomField>
    <fullName>ApplicationID__c</fullName>
    <label>ApplicationID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>