unpackaged/main/default/objects/ShowsiteContactSetting__c/fields/ApplicationKey__c.field-meta.xml
<CustomField>
    <fullName>ApplicationKey__c</fullName>
    <label>ApplicationKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>