unpackaged/main/default/objects/ShowsiteContactSetting__c/fields/Authentication_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Authentication_EndPoint__c</fullName>
    <label>Authentication EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>