unpackaged/main/default/objects/ShowsiteContactSetting__c/fields/Client_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Client_EndPoint__c</fullName>
    <label>Client EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>